fix: Nav links got broken in #3980 (#4032)
Righthand-nav links were no longer clickable since #3980. Fix that.

--- a/ietf/static/css/ietf.scss
+++ b/ietf/static/css/ietf.scss
@@ -175,7 +175,6 @@ table tbody.meta {
 // Style the righthand navigation panel
 #righthand-panel {
     max-height: 80vh;
-    z-index: -1;
 }
 
 #righthand-nav {
